...
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>

    <string name="register_btn">Register</string>
    <string name="cancel_btn">Cancel</string>

    <string name="failure_auth">Login or password is not correctly!</string>


    <!-- Message for login/registration-->
    <string name="message_empty_fields">Fields can not be empty!</string>
    <string name="message_error_login">The email or password don\'t correctly!</string>
    <string name="message_error_data">The user information is not correct!</string>
    <string name="password_error">The password is not in the correct format. Minimum:\n
            8 characters, max. 20, exclusively English;\n
            3 liters upper/lower register;\n
            One Liter Upper Register;\n
...
