...
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/greeting"
                                android:textColor="@color/txt_color_1"
                                android:textSize="19sp"
                                app:fontFamily="@font/poppins_medium"
                                app:layout_constraintBottom_toTopOf="@+id/textFullUserName"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textFullUserName"
                                style="@style/Widget.AppCompat.TextView"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewBalance"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.balance}"
                            android:textColor="@color/txt_color_2"
                            android:textSize="26sp"
...
